# databricks_data_extraction

./: .gitignore  LICENSE  README copy.md  README.md  README_deploy.md  README_dev.md  databricks.yml  package.json  pyproject.toml  tsconfig.json
[COMING SOON]databricks_app/: databricks.yml  package.json  pyproject.toml
[COMING SOON]databricks_app/src/data_extraction_app/: _metadata.py  (+1 more)
databricks_app/: README.md  app.yml  app_settings.yaml  databricks.yml  package.json  pyproject.toml  uv.toml
databricks_app/resources/: bundle_app.yml
databricks_app/src/data_extraction_app/backend/: CHAT_AUTH.md  agent_output.py  app.py  config.py  dependencies.py  router.py  serving_endpoint_metadata.py  serving_raw_invocation.py  workspace_auth.py
databricks_app/src/data_extraction_app/backend/agent_server/: __init__.py  agent.py
databricks_app/src/data_extraction_app/ui/routes/: index.tsx
databricks_etl/: README.md  databricks.yml  pyproject.toml
databricks_etl/resources/: extract_invoices.job.yml  extract_invoices.pipeline.yml  extract_productmanuals.job.yml  extract_productmanuals.pipeline.yml
databricks_etl/src/: README.md
databricks_etl/src/data_extraction_etl/: __init__.py
databricks_etl/src/evaluation/: evaluate_extraction.ipynb  evaluate_extraction.py
databricks_etl/src/exploration/: Exploration.ipynb
databricks_etl/src/genie_space/: create_genie_space_invoices.ipynb  create_genie_space_productmanuals.ipynb
databricks_etl/src/knowledge_assistant/: create_knowledge_assistant_invoices.ipynb  create_knowledge_assistant_productmanuals.ipynb  create_or_update_knowledge_assistant_invoices.ipynb  create_or_update_knowledge_assistant_productmanuals.ipynb  manage_knowledge_assistant.py
databricks_etl/src/supervisor_agent/: create_supervisor_agent_invoices.ipynb  create_supervisor_agent_productmanuals.ipynb  manage_supervisor_agent.py
databricks_etl/src/transformations/invoices/: 01_parsed.sql  02_extract.sql  03_process.sql
databricks_etl/src/transformations/productmanuals/: 01_parsed.py  02_extract.py  03_process.py
databricks_etl/src/transformations/productmanuals_sql/: 01_parsed.sql  02_extract.sql  03_process.sql
demo/: demo_notebook.ipynb
resources/: extract_invoices.job.yml  extract_invoices.pipeline.yml  extract_productmanuals.job.yml  extract_productmanuals.pipeline.yml
src/DataExtractionETL/: README.md
src/data_extraction_app/: _version.py
(+32 files in other folders)
